# reddit-news-bot

./: .gitignore  README.md  create_zip.sh  pyproject.toml  pyrightconfig.json
reddit_news_bot/: content_scraper.py  dynamo_connection.py  lambda_handler.py  main.py  reddit_poster.py  secrets.py
tests/: test_main.py
